--- a/k8s/demo/common/rse-istio-poc/pdf-service.yaml
+++ b/k8s/demo/common/rse-istio-poc/pdf-service.yaml
@@ -14,10 +14,10 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: cmc-pdf-service
-    version: 0.4.2
+    version: 0.6.0
   values:
     global:
       devMode: true
     java:
       ingressHost: ""
-      image: hmctspublic.azurecr.io/cmc/pdf-service:prod-a2de9cd4
+      image: hmctspublic.azurecr.io/rpe/pdf-service:prod-6b7d621a
