--- a/k8s/demo/common/rse-istio-poc/pdf-service.yaml
+++ b/k8s/demo/common/rse-istio-poc/pdf-service.yaml
@@ -18,6 +18,8 @@ spec:
   values:
     global:
       devMode: true
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      enableKeyVaults: true
     java:
       ingressHost: ""
       image: hmctspublic.azurecr.io/rpe/pdf-service:prod-6b7d621a
